# zc_web_poc

./: .gitignore  README.md
.github/workflows/: deploy-docs.yml  pages.yml
backend/: .env  .env.example  README.md  pyproject.toml  test_tags.py
backend/game_data/: abilities.json  elementals.json
backend/game_data/game_boards/: game_board_small.json
backend/src/tools/: generate_types.py
backend/src/zc_api/: __init__.py  __main__.py  config.py  dependencies.py  main.py
backend/src/zc_api/common/: logging.py
backend/src/zc_api/game_manager/: __init__.py  data_loader.py  manager.py
backend/src/zc_api/game_manager/session/: __init__.py  matchmaker.py  registry.py
backend/src/zc_api/models/: __init__.py  client.py  common.py  game.py  matchmaking.py  server.py  session.py
backend/src/zc_api/routers/: __init__.py  admin.py  catalog.py  game.py  health.py  matchmaking.py  utils.py  ws_game.py  ws_matchmaking.py  ws_utils.py
backend/src/zc_api/services/: __init__.py
backend/src/zc_api/session/: __init__.py  matchmaker.py  registry.py
backend/src/zc_api/tags/: __init__.py  gameplay_tag.py  gameplay_tag_container.py  tag_registry.py
backend/tests/: conftest.py  test_health.py
docker/: Dockerfile  docker-compose.yml
docs/: index.html
docs/style-guide/: block.html  board.html  fire.html  ice.html  index.html
docs/style-guide/shared/: board-page-init.js  fire-page-init.js  fire-shader-v2.js  fire-shader.js  frost-shader.js  (+5 more)
frontend/: .env.example  .env.local  README.md  index.html  openapi.json  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  env.d.ts  injection-keys.ts  main.ts  ws.ts
tools/: serve-docs.py
tools/game_board_editor/: README.md  pyproject.toml
tools/game_board_editor/src/game_board_editor/: __init__.py  board_data.py  editor_ui.py  main.py
(+40 files in other folders)
