[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zc-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.115.12",
    "pydantic~=2.11.4",
    "pydantic-settings~=2.8.1",
    "uvicorn[standard]~=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.5",
    "pytest-asyncio~=0.26.0",
    "httpx~=0.28.1",
    "ruff~=0.11.10",
    "pyright~=1.1.400",
]

[project.scripts]
zc-api = "zc_api.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["zc_api"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
